# RUST/Cargo.toml
[package]
name = "multi-database"
version = "0.1.0"
edition = "2021"

# Dependencias del proyecto
[dependencies]
sqlx = { version = "0.8", features = ["mysql", "postgres", "sqlite"] }
anyhow = "1.0"
warp = "0.3"
serde = "1.0"
dotenv = "0.15.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
windows_x86_64_msvc = "0.48.5"
